--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -79,7 +79,7 @@
                         :mediaItem="mediaItem"
                         :isLoading="isLoading"
                         @media-dropped="onDropMedia"
-                        @sw-category-view-on-page-change="getAssignedCmsPage"
+                        @sw-category-view-on-page-change="onCmsPageChange"
                         @sw-category-view-on-open-sidebar="openSidebar"
                         @sw-category-view-on-set-media="setMediaItem"
                         @sw-category-view-on-upload-media="onUploadAdded"
