--- a/Resources/administration/src/module/sw-cms/component/sw-cms-stage-add-block/sw-cms-stage-add-block.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-stage-add-block/sw-cms-stage-add-block.scss
@@ -22,7 +22,7 @@
 
     &.is--valid-drop {
         background: rgba($color-shopware-blue, 0.2);
-        border: 1px solid $color-shopware-blue;
+        border: 2px dashed $color-shopware-blue;
 
         .sw-cms-stage-add-block__handle,
         .sw-cms-stage-add-block__button {
