--- a/Resources/administration/src/module/sw-cms/elements/product-listing/config/sw-cms-el-config-product-listing.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/product-listing/config/sw-cms-el-config-product-listing.html.twig
@@ -9,5 +9,8 @@
             </sw-select-field>
         {% endblock %}
 
+        {% block sw_cms_element_product_listing_config_info %}
+            <sw-alert variant="info">{{ $tc('sw-cms.elements.infoTextListingElement') }}</sw-alert>
+        {% endblock %}
     </div>
 {% endblock %}
