--- a/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -28,7 +28,7 @@
                              spellcheck="false"
                              @focus="onFocus"
                              @paste="onPaste"
-                             @keyup="onContentChange"
+                             @blur="onContentChange"
                              tabindex="-1"
                              v-html="$sanitize(content)">
                         </div>
