--- a/Resources/administration/src/module/sw-cms/component/sw-cms-slot/sw-cms-slot.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-slot/sw-cms-slot.scss
@@ -75,7 +75,8 @@
         padding: 15px;
         background: $color-white;
         border: 1px solid $color-steam-cloud;
-        box-shadow: 0 0 4px 0 rgba($color-steam-cloud, 0.8);
+        border-radius: 5px;
+        background-clip: padding-box;
         position: relative;
         cursor: pointer;
 
@@ -103,6 +104,7 @@
             right: 0;
             bottom: 0;
             background: rgba(255, 255, 255, 0.8);
+            border-radius: 5px;
         }
     }
 }
