--- a/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.scss
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.scss
@@ -16,10 +16,16 @@
 
     .sw-cms-detail__page-info {
         display: grid;
-        grid-template-columns: 45px min-content min-content;
+        grid-template-columns: 45px 260px min-content;
         grid-gap: 20px;
         align-content: center;
         align-items: center;
+    }
+
+    .sw-cms-detail__page-type {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .sw-cms-detail__back-btn {
@@ -69,6 +75,14 @@
 
         .sw-field.sw-field--select {
             margin: 0;
+
+            &.sw-field--select select,
+            &.sw-field--select .sw-field__select-load-placeholder {
+                padding: 8px 16px;
+                line-height: 22px;
+                height: 40px;
+                font-size: 14px;
+            }
         }
     }
 
@@ -116,7 +130,15 @@
                 border-color: $color-shopware-blue;
             }
 
+            .sw-cms-detail__empty-stage-content {
+                text-align: center;
+                max-width: 360px;
+                margin: auto;
+            }
+
             h2.empty-stage__headline {
+                font-size: 32px;
+                font-weight: 400;
                 margin-bottom: 5px;
             }
 
@@ -190,8 +212,9 @@
 .sw-cms-detail__block-preview {
     margin: 0 0 20px 0;
     background: $color-white;
-    border: 1px solid $color-steam-cloud;
-    box-shadow: 0 0 4px 0 rgba($color-steam-cloud, 0.8);
+    border: 1px solid #d1d9e0;
+    border-radius: 5px;
+    background-clip: padding-box;
     cursor: grab;
     user-select: none;
     user-focus: none;
@@ -202,7 +225,8 @@
         background-color: $color-iron;
     }
 
-    &.is--drag-element {
+    &.is--drag-element,
+    &.is--drag-element.is--valid-drag {
         border: 1px solid $color-shopware-blue;
         box-shadow: 0 0 4px 0 rgba($color-shopware-blue, 0.4);
     }
