--- a/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -79,7 +79,41 @@
                                                               v-for="cmsPage in pages"
                                                               :page="cmsPage"
                                                               :key="cmsPage.id"
+                                                              @preview-image-change="onPreviewChange"
+                                                              @cms-page-delete="onDeleteCmsPage"
                                                               @onItemClick="onListItemClick">
+
+                                                <sw-context-button slot="contextMenu"
+                                                                   class="sw-cms-list-item__options">
+
+                                                    {% block sw_cms_list_listing_list_item_option_add_preview %}
+                                                        <sw-context-menu-item
+                                                                class="sw-cms-list-item__option-preview"
+                                                                @click="onPreviewChange(cmsPage)">
+                                                            {{ $tc('sw-cms.components.cmsListItem.addPreviewImage') }}
+                                                        </sw-context-menu-item>
+                                                    {% endblock %}
+
+                                                    {% block sw_cms_list_listing_list_item_option_remove_preview %}
+                                                        <sw-context-menu-item
+                                                                class="sw-cms-list-item__option-preview"
+                                                                v-if="cmsPage.previewMediaId"
+                                                                variant="danger"
+                                                                @click="onPreviewImageRemove(cmsPage)">
+                                                            {{ $tc('sw-cms.components.cmsListItem.removePreviewImage') }}
+                                                        </sw-context-menu-item>
+                                                    {% endblock %}
+
+                                                    {% block sw_cms_list_listing_list_item_option_delete %}
+                                                        <sw-context-menu-item
+                                                                class="sw-cms-list-item__option-delete"
+                                                                variant="danger"
+                                                                @click="onDeleteCmsPage(cmsPage)">
+                                                            {{ $tc('sw-cms.components.cmsListItem.delete') }}
+                                                        </sw-context-menu-item>
+                                                    {% endblock %}
+
+                                                </sw-context-button>
                                             </sw-cms-list-item>
                                         {% endblock %}
                                     </div>
@@ -88,6 +122,54 @@
                         {% endblock %}
                     </div>
                 {% endblock %}
+
+                {% block sw_cms_list_media_modal %}
+                    <sw-media-modal
+                            variant="regular"
+                            v-if="showMediaModal"
+                            :caption="$tc('sw-cms.components.cmsListItem.modal.captionMediaUpload')"
+                            :entityContext="pageStore._entityName"
+                            :allowMultiSelect="false"
+                            :initialFolderId="pageStore.defaultMediaFolderId"
+                            @media-modal-selection-change="onPreviewImageChange"
+                            @modal-close="onModalClose">
+                    </sw-media-modal>
+                {% endblock %}
+
+                {% block sw_cms_list_delete_modal %}
+                    <sw-modal v-if="showDeleteModal"
+                              @modal-close="onCloseDeleteModal"
+                              :title="$tc('sw-cms.components.cmsListItem.removePreviewImage')"
+                              variant="small">
+                              
+                        {% block sw_cms_list_delete_modal_confirm_delete_text %}
+                            <div class="sw_tree__confirm-delete-text">
+                                {{ $tc('sw-cms.components.cmsListItem.modal.textDeleteConfirm', 0,
+                                 { pageName: currentPage.translated.name || currentPage.name }) }}
+                            </div>
+                        {% endblock %}
+    
+                        {% block sw_cms_list_delete_modal_footer %}
+                            <template slot="modal-footer">
+                                {% block sw_cms_list_delete_modal_cancel %}
+                                    <sw-button @click="onCloseDeleteModal"
+                                               size="small">
+                                        {{ $tc('sw-cms.components.cmsListItem.modal.buttonCancel') }}
+                                    </sw-button>
+                                {% endblock %}
+        
+                                {% block sw_cms_list_delete_modal_confirm %}
+                                    <sw-button @click="onConfirmPageDelete"
+                                               variant="danger"
+                                               size="small">
+                                        {{ $tc('sw-cms.components.cmsListItem.modal.buttonDelete') }}
+                                    </sw-button>
+                                {% endblock %}
+                            </template>
+                        {% endblock %}
+                    </sw-modal>
+                {% endblock %}
+                
             </template>
         {% endblock %}
     </sw-page>
