NTR - Fix overflow in boxed mode

--- a/Resources/administration/src/app/component/form/sw-compact-colorpicker/sw-compact-colorpicker.scss
+++ b/Resources/administration/src/app/component/form/sw-compact-colorpicker/sw-compact-colorpicker.scss
@@ -15,8 +15,8 @@
             order: 3;
 
             button {
-                color: $color-kashmir;
-                background: $color-link-water;
+                color: $color-white;
+                background: $color-shopware-blue;
                 border: 1px solid $color-steam-cloud;
                 border-radius: $border-radius-default;
                 padding: 2px 24px;
@@ -35,8 +35,8 @@
                 position: relative;
 
                 &:hover {
-                    color: darken($color-kashmir, 5%);
-                    background: darken($color-link-water, 5%);
+                    color: darken($color-white, 5%);
+                    background: darken($color-shopware-blue, 5%);
                     border-color: darken($color-steam-cloud, 5%);
                 }
             }
