NTR - Fix boxed mode placeholder height

--- a/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.scss
+++ b/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.scss
@@ -50,6 +50,7 @@
         top: 0;
         width: 100%;
         pointer-events: none;
+        padding: 20px;
         color: darken($color-light-gray, 20%);
 
         > * {
