NEXT-2904 - Fix e2e tests

--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -120,6 +120,7 @@
                             <sw-select-rule-create :ruleId="shippingMethod.availabilityRuleId"
                                                    :ruleFilter="ruleFilter"
                                                    :required="true"
+                                                   class="sw-settings-shipping-detail__top-rule"
                                                    @save-rule="onSaveRule">
                             </sw-select-rule-create>
                         {% endblock %}
