--- a/Resources/administration/src/module/sw-media/component/sw-media-library/sw-media-library.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sw-media-library/sw-media-library.html.twig
@@ -26,7 +26,7 @@
                             v-if="!isLoading && selectableItems.length === 0"
                             :title="$tc('sw-media.mediaLibrary.titleEmptyState')">
                         <template slot="icon">
-                            <sw-icon name="default-object-image" size="60px" color="#FFD700"></sw-icon>
+                            <sw-icon name="default-object-image" size="60px" color="#ff68b4"></sw-icon>
                         </template>
                         {{ $tc('sw-media.mediaLibrary.descriptionEmptyState') }}
                     </sw-empty-state>
