NEXT-2971 - Remove feature flag

--- a/Resources/administration/src/module/sw-mail-template/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/extension/sw-settings-index/sw-settings-index.html.twig
@@ -2,7 +2,7 @@
     {% parent %}
 
     {% block sw_mail_template_item %}
-        <template v-if="next712">
+        <template>
             <sw-settings-item id="sw-mail-template" :label="$tc('sw-mail-template.general.mainMenuItemGeneral')" :to="{ name: 'sw.mail.template.index' }">
                 <template slot="icon">
                     <sw-icon name="default-communication-envelope"></sw-icon>
