NTR - Remove border from active switch due to sw-field changes

--- a/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
@@ -18,8 +18,8 @@
                     {% block sw_category_detail_information_active %}
                         <sw-field
                             type="switch"
-                            bordered
                             name="categoryActive"
+                            class="sw-category-detail-base__active"
                             :label="$tc('sw-category.base.general.isCategoryActiveLabel')"
                             v-model="category.active">
                         </sw-field>
