--- a/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.scss
+++ b/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.scss
@@ -12,6 +12,11 @@
         top: 0;
     }
 
+    .sw-category-detail-base__active {
+        display: grid;
+        align-items: center;
+    }
+
     .sw-category-detail-base__tags {
         margin-bottom: 14px;
     }
