NTR - fix plugin icon in payment admin

--- a/Resources/administration/src/module/sw-settings-payment/component/sw-plugin-box/sw-plugin-box.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/component/sw-plugin-box/sw-plugin-box.html.twig
@@ -9,7 +9,7 @@
                         {% block sw_plugin_box_container_plugin_data_icon %}
                             <img v-if="!!plugin.icon"
                                  class="sw-plugin-box__icon"
-                                 :src="plugin.icon" />
+                                 :src="`data:image/png;base64, ${plugin.icon}`" />
                         {% endblock %}
                         {% block sw_plugin_box_container_plugin_data_description %}
                             <div class="sw-plugin-box__description">
