--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-prices/sw-product-variants-configurator-prices.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-prices/sw-product-variants-configurator-prices.html.twig
@@ -54,6 +54,7 @@
                                         <sw-product-variants-price-field
                                                 :price="getCurrencyOfOption(item, currency.id)"
                                                 :taxRate="product.taxId"
+                                                :currency="currency"
                                                 compact>
                                         </sw-product-variants-price-field>
                                     </template>
