--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-overview/sw-product-variants-overview.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-overview/sw-product-variants-overview.html.twig
@@ -119,6 +119,7 @@
                                         :price="item.price"
                                         :taxRate="item.taxId"
                                         :compact="compact"
+                                        :currency="currency"
                                         onlyPositive>
                                 </sw-product-variants-price-field>
                             {% endblock %}
@@ -129,6 +130,7 @@
                                         :price="item.price"
                                         :taxRate="item.taxId"
                                         :compact="compact"
+                                        :currency="currency"
                                         onlyPositive
                                         readonly>
                                 </sw-product-variants-price-field>
