NTR - fix condition tree styling

--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.scss
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.scss
@@ -42,7 +42,7 @@ $sw-condition-base-text-access-key: $color-gutenberg;
         border-bottom: 1px solid $sw-condition-base-color-border;
     }
 
-    .sw-field {
+    .sw-field.sw-field--medium {
         margin-bottom: 0;
     }
 
