NTR - Add locked-state to cms-item preview component

--- a/Resources/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.html.twig
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.html.twig
@@ -19,6 +19,7 @@
             <div class="sw-cms-list-item__info">
                 <sw-icon class="sw-cms-list-item__status" name="small-default-circle-medium" small></sw-icon>
                 <div class="sw-cms-list-item__title" v-if="page" @click="$emit('onItemClick', page)">{{ page.translated.name }}</div>
+                <sw-icon v-if="page && page.locked" class="sw-cms-list-item__locked" name="small-lock-closed" small></sw-icon>
             </div>
         {% endblock %}
     </div>
