--- a/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -106,6 +106,7 @@
 
                                                     {% block sw_cms_list_listing_list_item_option_delete %}
                                                         <sw-context-menu-item
+                                                                v-if="!cmsPage.locked"
                                                                 class="sw-cms-list-item__option-delete"
                                                                 variant="danger"
                                                                 @click="onDeleteCmsPage(cmsPage)">
@@ -141,14 +142,14 @@
                               @modal-close="onCloseDeleteModal"
                               :title="$tc('sw-cms.components.cmsListItem.removePreviewImage')"
                               variant="small">
-                              
+
                         {% block sw_cms_list_delete_modal_confirm_delete_text %}
                             <div class="sw_tree__confirm-delete-text">
                                 {{ $tc('sw-cms.components.cmsListItem.modal.textDeleteConfirm', 0,
                                  { pageName: currentPage.translated.name || currentPage.name }) }}
                             </div>
                         {% endblock %}
-    
+
                         {% block sw_cms_list_delete_modal_footer %}
                             <template slot="modal-footer">
                                 {% block sw_cms_list_delete_modal_cancel %}
@@ -157,7 +158,7 @@
                                         {{ $tc('sw-cms.components.cmsListItem.modal.buttonCancel') }}
                                     </sw-button>
                                 {% endblock %}
-        
+
                                 {% block sw_cms_list_delete_modal_confirm %}
                                     <sw-button @click="onConfirmPageDelete"
                                                variant="danger"
@@ -169,7 +170,7 @@
                         {% endblock %}
                     </sw-modal>
                 {% endblock %}
-                
+
             </template>
         {% endblock %}
     </sw-page>
