--- a/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
@@ -28,6 +28,7 @@
         <template v-if="element.config.displayMode.value === 'cover'">
             {% block sw_cms_element_image_config_min_height %}
                 <sw-text-field :label="$tc('sw-cms.elements.labelMediaMinHeight')"
+                               v-model="element.config.minHeight.value"
                                @input="onChangeMinHeight">
                 </sw-text-field>
             {% endblock %}
