NEXT-3031 - fix product stream single select font size

--- a/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.scss
+++ b/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.scss
@@ -6,6 +6,10 @@ $sw-condition-base-api: #F0F2F5;
 $sw-condition-base-z-index-arrow: 100;
 
 .sw-product-stream-filter {
+    .sw-select__input-single {
+        font-size: 14px;
+    }
+
     .field--condition {
         &.field--not-last {
             &:before {
