--- a/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.scss
+++ b/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.scss
@@ -8,16 +8,18 @@ $sw-simple-search-field-search-icon-color: $color-gutenberg;
 
     .sw-simple-search-field__input {
         margin-bottom: 0;
+
         input {
-            padding: 0 20px 0 44px;
+            padding-right: 44px;
+            padding-left: 20px;
         }
     }
 
     .sw-simple-search-field__search-icon, .sw-icon {
-        position: absolute;
         color: $sw-simple-search-field-search-icon-color;
-        left: 24px;
-        top: 50%;
         transform: translate(0, -50%);
+        position: absolute;
+        right: 18px;
+        top: 50%;
     }
 }
