NEXT-2976 - Add version to kernel

--- a/Resources/administration/src/app/component/base/sw-version/sw-version.html.twig
+++ b/Resources/administration/src/app/component/base/sw-version/sw-version.html.twig
@@ -21,7 +21,7 @@
         {% block sw_version_info %}
             <div class="sw-version__info">
                 {% block sw_version_info_text %}
-                    {{ $tc('global.sw-admin-menu.textShopwareAdmin') }}
+                    {{ version }}
                 {% endblock %}
             </div>
         {% endblock %}
