NEXT-3034 - Fix order style and show current state
NEXT-3081 - hide placeholder if sw-tag-field is disabled

--- a/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-tag-field/sw-tag-field.html.twig
@@ -6,7 +6,7 @@
                            multi
                            ref="swTagSelect"
                            :label="label ? $tc('global.sw-tag-field.title') : ''"
-                           :placeholder="$tc('global.sw-tag-field.placeholder')"
+                           :placeholder="disabled ? null : $tc('global.sw-tag-field.placeholder')"
                            :associationStore="associationStore"
                            :store="tagStore"
                            :possibleMinPosition="-1"
