NEXT-3059 - Textarea size changes breaks layout of page

--- a/Resources/administration/src/app/component/form/sw-textarea-field/sw-textarea-field.scss
+++ b/Resources/administration/src/app/component/form/sw-textarea-field/sw-textarea-field.scss
@@ -5,6 +5,7 @@
         line-height: 22px;
         min-height: 125px;
         max-height: 300px;
+        resize: vertical;
     }
 
     textarea:disabled {
